# MATA54-trabalhos-3-4

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  trabalho_2_estrutura.c
lib/: arvore_2d.c  arvore_2d.h  arvore_2d_test.c  constantes.h  pagina.c  pagina.h  pagina_test.c  registro.c  registro.h  registro_test.c  utils.c  utils.h  utils_test.c
lib/tests/: common.h  test_lib.c  test_lib.h
tests/: testes_trabalho4.sh  utils.sh
